# Full-Stack-com-Flask-e-Flet

./: README.md  landing.css  landing.html
apps/backend/: .env  .env.example  README.md  docker-compose.yml  pyproject.toml
apps/backend/src/: app.py  models.py
apps/backend/src/database/: seed.sql
apps/backend/src/routes/: actors.py  genres.py  movies.py  series.py
apps/backend/src/schemas/: actor_schema.py  movie_schema.py  series_schema.py
apps/frontend/: README.md  landing.html  main.py
apps/frontend/src/: api.py  state.py
apps/frontend/src/components/: navbar.py
apps/frontend/src/views/: actors.py  add_movie.py  genres.py  movies.py  series.py
